crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

/**
 * A vector of bits
 */
typedef struct sp_CBitVec sp_CBitVec;
/**
 * C-wrapper for grid containing brightness values.
 */
typedef struct sp_CBrightnessGrid sp_CBrightnessGrid;
/**
 * Represents a span of memory (`&mut [u8]` ) as a struct usable by C code.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - accesses to the memory pointed to with `start` is never accessed outside `length`
 * - the lifetime of the `CByteSlice` does not outlive the memory it points to, as described in
 *   the function returning this type.
 */
typedef struct sp_CByteSlice {
    /**
     * The start address of the memory
     */
    uint8_t *start;
    /**
     * The amount of memory in bytes
     */
    size_t length;
} sp_CByteSlice;
/**
 * Clones a `BitVec`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 * - `this` is not written to concurrently
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_bit_vec_dealloc`.
 */
struct sp_CBitVec *sp_bit_vec_clone(const struct sp_CBitVec *this_);
/**
 * Deallocates a `BitVec`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 * - `this` is not used concurrently or after this call
 * - `this` was not passed to another consuming function, e.g. to create a `Command`
 */
void sp_bit_vec_dealloc(struct sp_CBitVec *this_);
/**
 * Sets the value of all bits in the `BitVec`.
 *
 * # Arguments
 *
 * - `value`: the value to set all bits to
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 * - `this` is not written to or read from concurrently
 */
void sp_bit_vec_fill(struct sp_CBitVec *this_, bool value);
/**
 * Gets the value of a bit from the `BitVec`.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 * - `index`: the bit index to read
 *
 * returns: value of the bit
 *
 * # Panics
 *
 * When accessing `index` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 * - `this` is not written to concurrently
 */
bool sp_bit_vec_get(const struct sp_CBitVec *this_, size_t index);
/**
 * Returns true if length is 0.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 */
bool sp_bit_vec_is_empty(const struct sp_CBitVec *this_);
/**
 * Gets the length of the `BitVec` in bits.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 */
size_t sp_bit_vec_len(const struct sp_CBitVec *this_);
/**
 * Interpret the data as a series of bits and load then into a new `BitVec` instance.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `data` points to a valid memory location of at least `data_length`
 *   bytes in size.
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_bit_vec_dealloc`.
 */
struct sp_CBitVec *sp_bit_vec_load(const uint8_t *data,
                                   size_t data_length);
/**
 * Creates a new `BitVec` instance.
 *
 * # Arguments
 *
 * - `size`: size in bits.
 *
 * returns: `BitVec` with all bits set to false.
 *
 * # Panics
 *
 * When `size` is not divisible by 8.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_bit_vec_dealloc`.
 */
struct sp_CBitVec *sp_bit_vec_new(size_t size);
/**
 * Sets the value of a bit in the `BitVec`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `index`: the bit index to edit
 * - `value`: the value to set the bit to
 *
 * returns: old value of the bit
 *
 * # Panics
 *
 * When accessing `index` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 * - `this` is not written to or read from concurrently
 */
void sp_bit_vec_set(struct sp_CBitVec *this_, size_t index, bool value);
/**
 * Gets an unsafe reference to the data of the `BitVec` instance.
 *
 * ## Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 * - the returned memory range is never accessed after the passed `BitVec` has been freed
 * - the returned memory range is never accessed concurrently, either via the `BitVec` or directly
 */
struct sp_CByteSlice sp_bit_vec_unsafe_data_ref(struct sp_CBitVec *this_);
/**
 * Clones a `BrightnessGrid`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BrightnessGrid`
 * - `this` is not written to concurrently
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_brightness_grid_dealloc`.
 */
struct sp_CBrightnessGrid *sp_brightness_grid_clone(const struct sp_CBrightnessGrid *this_);
/**
 * Deallocates a `BrightnessGrid`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BrightnessGrid`
 * - `this` is not used concurrently or after this call
 * - `this` was not passed to another consuming function, e.g. to create a `Command`
 */
void sp_brightness_grid_dealloc(struct sp_CBrightnessGrid *this_);
/**
 * Gets the current value at the specified position.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 * - `x` and `y`: position of the cell to read
 *
 * # Panics
 *
 * When accessing `x` or `y` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BrightnessGrid`
 * - `this` is not written to concurrently
 */
uint8_t sp_brightness_grid_get(const struct sp_CBrightnessGrid *this_,
                               size_t x,
                               size_t y);
/**
 * Loads a `BrightnessGrid` with the specified dimensions from the provided data.
 *
 * # Panics
 *
 * When the provided `data_length` is not sufficient for the `height` and `width`
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `data` points to a valid memory location of at least `data_length`
 *   bytes in size.
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_brightness_grid_dealloc`.
 */
struct sp_CBrightnessGrid *sp_brightness_grid_load(size_t width,
                                                   size_t height,
                                                   const uint8_t *data,
                                                   size_t data_length);
/**
 * Creates a new `BrightnessGrid` with the specified dimensions.
 *
 * returns: `BrightnessGrid` initialized to 0.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_brightness_grid_dealloc`.
 */
struct sp_CBrightnessGrid *sp_brightness_grid_new(size_t width,
                                                  size_t height);