crates/servicepoint_binding_cs/ServicePoint/BindGen/ServicePoint.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace ServicePoint.BindGen
{
    public static unsafe partial class NativeMethods
    {
        const string __DllName = "servicepoint_binding_c";

        public const nuint SP_TILE_SIZE = 8;
        public const nuint SP_TILE_WIDTH = 56;
        public const nuint SP_TILE_HEIGHT = 20;


        /// <summary>
        ///  Creates a new `BitVec` instance.
        ///
        ///  # Arguments
        ///
        ///  - `size`: size in bits.
        ///
        ///  returns: `BitVec` with all bits set to false.
        ///
        ///  # Panics
        ///
        ///  When `size` is not divisible by 8.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_bit_vec_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern BitVec* sp_bit_vec_new(nuint size);

        /// <summary>
        ///  Interpret the data as a series of bits and load then into a new `BitVec` instance.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `data` points to a valid memory location of at least `data_length`
        ///    bytes in size.
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_bit_vec_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern BitVec* sp_bit_vec_load(byte* data, nuint data_length);

        /// <summary>
        ///  Clones a `BitVec`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        ///  - `this` is not written to concurrently
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_bit_vec_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern BitVec* sp_bit_vec_clone(BitVec* @this);

        /// <summary>
        ///  Deallocates a `BitVec`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        ///  - `this` is not used concurrently or after this call
        ///  - `this` was not passed to another consuming function, e.g. to create a `Command`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_bit_vec_dealloc(BitVec* @this);

        /// <summary>
        ///  Gets the value of a bit from the `BitVec`.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to read from
        ///  - `index`: the bit index to read
        ///
        ///  returns: value of the bit
        ///
        ///  # Panics
        ///
        ///  When accessing `index` out of bounds.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        ///  - `this` is not written to concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool sp_bit_vec_get(BitVec* @this, nuint index);

        /// <summary>
        ///  Sets the value of a bit in the `BitVec`.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to write to
        ///  - `index`: the bit index to edit
        ///  - `value`: the value to set the bit to
        ///
        ///  returns: old value of the bit
        ///
        ///  # Panics
        ///
        ///  When accessing `index` out of bounds.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        ///  - `this` is not written to or read from concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_set", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_bit_vec_set(BitVec* @this, nuint index, [MarshalAs(UnmanagedType.U1)] bool value);

        /// <summary>
        ///  Sets the value of all bits in the `BitVec`.
        ///
        ///  # Arguments
        ///
        ///  - `value`: the value to set all bits to
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        ///  - `this` is not written to or read from concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_fill", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_bit_vec_fill(BitVec* @this, [MarshalAs(UnmanagedType.U1)] bool value);

        /// <summary>
        ///  Gets the length of the `BitVec` in bits.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint sp_bit_vec_len(BitVec* @this);

        /// <summary>
        ///  Returns true if length is 0.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_is_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool sp_bit_vec_is_empty(BitVec* @this);

        /// <summary>
        ///  Gets an unsafe reference to the data of the `BitVec` instance.
        ///
        ///  ## Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        ///  - the returned memory range is never accessed after the passed `BitVec` has been freed
        ///  - the returned memory range is never accessed concurrently, either via the `BitVec` or directly
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_bit_vec_unsafe_data_ref", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ByteSlice sp_bit_vec_unsafe_data_ref(BitVec* @this);

        /// <summary>
        ///  Creates a new `BrightnessGrid` with the specified dimensions.
        ///
        ///  returns: `BrightnessGrid` initialized to 0.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_brightness_grid_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern BrightnessGrid* sp_brightness_grid_new(nuint width, nuint height);

        /// <summary>
        ///  Loads a `BrightnessGrid` with the specified dimensions from the provided data.
        ///
        ///  # Panics
        ///
        ///  When the provided `data_length` is not sufficient for the `height` and `width`
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `data` points to a valid memory location of at least `data_length`
        ///    bytes in size.
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_brightness_grid_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern BrightnessGrid* sp_brightness_grid_load(nuint width, nuint height, byte* data, nuint data_length);

        /// <summary>
        ///  Clones a `BrightnessGrid`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BrightnessGrid`
        ///  - `this` is not written to concurrently
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_brightness_grid_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern BrightnessGrid* sp_brightness_grid_clone(BrightnessGrid* @this);

        /// <summary>
        ///  Deallocates a `BrightnessGrid`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BrightnessGrid`
        ///  - `this` is not used concurrently or after this call
        ///  - `this` was not passed to another consuming function, e.g. to create a `Command`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_brightness_grid_dealloc(BrightnessGrid* @this);

        /// <summary>
        ///  Gets the current value at the specified position.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to read from
        ///  - `x` and `y`: position of the cell to read
        ///
        ///  # Panics
        ///
        ///  When accessing `x` or `y` out of bounds.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BrightnessGrid`
        ///  - `this` is not written to concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_brightness_grid_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte sp_brightness_grid_get(BrightnessGrid* @this, nuint x, nuint y);
